--- a/UIKit-Animations/ConstraintsAnimation.storyboard
+++ b/UIKit-Animations/ConstraintsAnimation.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Constraints View Controller-->
+        <!--Constraints AnimationVC-->
         <scene sceneID="IBw-N2-OyT">
             <objects>
-                <viewController storyboardIdentifier="ConstraintsViewController" id="UWu-Ca-gPG" customClass="ConstraintsViewController" customModule="UIKit_Animations" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ConstraintsAnimationVC" id="UWu-Ca-gPG" customClass="ConstraintsAnimationVC" customModule="UIKit_Animations" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="29h-EQ-q8I">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,26 +22,45 @@
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="44"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Up"/>
+                                        <connections>
+                                            <action selector="animateViewUP:" destination="UWu-Ca-gPG" eventType="touchUpInside" id="p2I-CF-vhT"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6U-Dc-kib">
                                         <rect key="frame" x="207" y="0.0" width="167" height="44"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Down"/>
+                                        <connections>
+                                            <action selector="animateViewDOWN:" destination="UWu-Ca-gPG" eventType="touchUpInside" id="7dA-mh-BzZ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="sVL-2O-zC0"/>
                                 </constraints>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7X2-sB-vK2">
+                                <rect key="frame" x="103.5" y="344.5" width="207" height="207"/>
+                                <color key="backgroundColor" red="1" green="0.8263389069" blue="0.91434075510000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7X2-sB-vK2" secondAttribute="height" multiplier="1:1" id="O9E-NE-jbI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="SGY-OW-s0w" firstAttribute="leading" secondItem="ICj-cR-1hJ" secondAttribute="leading" constant="20" id="5PJ-t3-SBa"/>
+                            <constraint firstItem="7X2-sB-vK2" firstAttribute="centerY" secondItem="29h-EQ-q8I" secondAttribute="centerY" id="AId-7C-J4a"/>
+                            <constraint firstItem="7X2-sB-vK2" firstAttribute="centerX" secondItem="29h-EQ-q8I" secondAttribute="centerX" id="LM8-wc-RSO"/>
                             <constraint firstItem="SGY-OW-s0w" firstAttribute="bottom" secondItem="ICj-cR-1hJ" secondAttribute="bottom" constant="-100" id="aa3-5A-kWs"/>
+                            <constraint firstItem="7X2-sB-vK2" firstAttribute="width" secondItem="29h-EQ-q8I" secondAttribute="width" multiplier="0.5" id="ce1-y1-MZq"/>
                             <constraint firstItem="ICj-cR-1hJ" firstAttribute="trailing" secondItem="SGY-OW-s0w" secondAttribute="trailing" constant="20" id="oxd-xr-e13"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ICj-cR-1hJ"/>
                     </view>
+                    <connections>
+                        <outlet property="pinkBoxYConstraint" destination="AId-7C-J4a" id="Py2-8g-zjf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ehD-ag-Q8G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
